# LiteGraph

./: .gitignore  README.md  TEST_RESULTS.md  complete_demo.py  demo_advanced_workflow.py  env.example  pyproject.toml  test_agent_tools.py
LiteGraph/: __init__.py
LiteGraph/agent/: __init__.py  parser.py  react_agent.py  tool_registry.py
LiteGraph/core/: __init__.py  graph.py  node.py  state.py
LiteGraph/llms/: __init__.py  openai_client.py
examples/: __init__.py  basic_graph.py  react_agent_demo.py
tests/: __init__.py  test_graph.py  test_parser.py
